fix(Radio): prevent radio button from shrinking (#2389)
* fix(Radio): prevent radio button from shrinking

When Radio.Group has props vertical and layout_direction: column long labels causes the radio button to be unaligend.
This is caused by width getting shrunk to avoid text overflowing.

Setting `flex-shrink: 0` on `dnb-radio__shell` will prevent the radio buttons width getting shrunk.

* chore(Radio): update snapshots

---------

--- a/packages/dnb-eufemia/src/components/radio/style/_radio.scss
+++ b/packages/dnb-eufemia/src/components/radio/style/_radio.scss
@@ -34,6 +34,7 @@
 
     display: flex;
     align-items: center;
+    flex-shrink: 0;
     justify-content: center;
 
     width: var(--radio-width--medium);
